--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,27 @@
 
     <groupId>io.gatekeeper</groupId>
     <artifactId>gatekeeper</artifactId>
+
     <version>0.0.0</version>
+
+    <name>gatekeeper</name>
+    <description>A highly-available, distributed and secure SSL-termination manager</description>
+    <url>https://github.com/jackprice/gatekeeper</url>
+
+    <properties>
+        <commons-version>1.3.1</commons-version>
+        <yaml-version>1.17</yaml-version>
+        <unirest-version>1.4.9</unirest-version>
+        <httpclient-version>4.5.2</httpclient-version>
+        <guava-version>19.0</guava-version>
+        <vertx-version>3.2.1</vertx-version>
+        <swagger-version>1.5.9</swagger-version>
+        <jersey-version>1.19.1</jersey-version>
+        <fasterxml-version>2.7.0</fasterxml-version>
+        <migbase64-version>2.2</migbase64-version>
+        <junit-version>4.12</junit-version>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
@@ -55,104 +75,116 @@
             </plugin>
         </plugins>
     </build>
-    <name>gatekeeper</name>
 
     <dependencies>
 
         <dependency>
-            <groupId>io.atomix</groupId>
-            <artifactId>atomix-all</artifactId>
-            <version>1.0.0-rc9</version>
-        </dependency>
-
-        <dependency>
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
-            <version>1.3.1</version>
+            <version>${commons-version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
-            <version>1.17</version>
+            <version>${yaml-version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.mashape.unirest</groupId>
             <artifactId>unirest-java</artifactId>
-            <version>1.4.9</version>
+            <version>${unirest-version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>4.5.2</version>
+            <version>${httpclient-version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>19.0</version>
+            <version>${guava-version}</version>
         </dependency>
 
         <dependency>
             <groupId>io.vertx</groupId>
             <artifactId>vertx-web</artifactId>
-            <version>3.2.1</version>
+            <version>${vertx-version}</version>
         </dependency>
 
         <dependency>
             <groupId>io.swagger</groupId>
             <artifactId>swagger-core</artifactId>
-            <version>1.5.9</version>
+            <version>${swagger-version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.sun.jersey</groupId>
             <artifactId>jersey-client</artifactId>
-            <version>1.19.1</version>
+            <version>${jersey-version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.sun.jersey</groupId>
             <artifactId>jersey-server</artifactId>
-            <version>1.19.1</version>
+            <version>${jersey-version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.sun.jersey.contribs</groupId>
             <artifactId>jersey-multipart</artifactId>
-            <version>1.19.1</version>
+            <version>${jersey-version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.7.0</version>
+            <version>${fasterxml-version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
-            <version>2.7.0</version>
+            <version>${fasterxml-version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.fasterxml.jackson.jaxrs</groupId>
             <artifactId>jackson-jaxrs-json-provider</artifactId>
-            <version>2.7.0</version>
+            <version>${fasterxml-version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.brsanthu</groupId>
             <artifactId>migbase64</artifactId>
-            <version>2.2</version>
+            <version>${migbase64-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.hazelcast</groupId>
+            <artifactId>hazelcast</artifactId>
+            <version>3.6.3</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.shredzone.acme4j</groupId>
+            <artifactId>acme4j-client</artifactId>
+            <version>0.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.shredzone.acme4j</groupId>
+            <artifactId>acme4j-utils</artifactId>
+            <version>0.5</version>
         </dependency>
 
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <version>${junit-version}</version>
             <scope>test</scope>
         </dependency>
 
